# recast-rs

./: .gitignore  .markdownlint.jsonc  CHANGELOG.md  Cargo.toml  README.md  deny.toml  mise.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  cpp_compatibility.md  feature_request.md
.github/workflows/: ci.yml  cross-build.yml
crates/detour/: Cargo.toml  README.md
crates/detour-crowd/: Cargo.toml  README.md
crates/detour-crowd/src/: crowd.rs  crowd_behaviors.rs  crowd_memory_scalability_tests.rs  formation.rs  lib.rs  local_boundary.rs  obstacle_avoidance.rs  path_corridor.rs  proximity_grid.rs  rvo.rs
crates/detour-dynamic/: Cargo.toml  README.md
crates/detour-dynamic/src/: checkpoint.rs  colliders.rs  config.rs  dynamic_navmesh.rs  dynamic_tile.rs  lib.rs  voxel_query.rs
crates/detour-dynamic/src/colliders/: base.rs  box_collider.rs  capsule_collider.rs  composite_collider.rs  convex_trimesh_collider.rs  cylinder_collider.rs  cylinder_collider_v2.rs  sphere_collider.rs  trimesh_collider.rs
crates/detour-dynamic/src/io/: compressor.rs  mod.rs  voxel_file.rs  voxel_file_reader.rs  voxel_file_writer.rs  voxel_tile.rs
crates/detour-dynamic/src/jobs/: collider_addition_job.rs  collider_removal_job.rs  dynamic_tile_job.rs  mod.rs
crates/detour-tilecache/: Cargo.toml  README.md
crates/detour-tilecache/src/: lib.rs  tile_cache.rs  tile_cache_builder.rs  tile_cache_data.rs  tile_cache_integration.rs
crates/detour/src/: advanced_navigation_function_tests.rs  binary_format.rs  bvh_tree.rs  concurrency_safety_tests.rs  cross_platform_serialization_tests.rs  detour_common.rs  detour_common_geometry_tests.rs  detour_edge_cases_tests.rs  detour_math.rs  detour_math_operations_tests.rs  detour_memory_scalability_tests.rs  detour_multi_tile_tests.rs  detour_off_mesh_connection_tests.rs  detour_parameter_validation_tests.rs  detour_query_filter_tests.rs  detour_raycast_comprehensive_tests.rs  detour_spatial_query_tests.rs  dt_status.rs  hierarchical_pathfinding.rs  lib.rs  nav_mesh.rs  nav_mesh_builder.rs  nav_mesh_query.rs  node_pool.rs  path_queue.rs  platform_compatibility_tests.rs  poly_query.rs  raycast_hit.rs  sliced_pathfinding.rs  status.rs  test_mesh_helpers.rs
crates/recast/: Cargo.toml  README.md
crates/recast-cli/: Cargo.toml  README.md
crates/recast-cli/src/: main.rs
crates/recast-common/: Cargo.toml  README.md
crates/recast-common/src/: geometry.rs  lib.rs  math.rs  mesh.rs  mesh_simplification.rs  vector.rs
crates/recast-common/src/debug/: mod.rs  visualization.rs
crates/recast/src/: area.rs  compact_heightfield.rs  config.rs  context.rs  contour.rs  convex_volume.rs  detail_mesh.rs  distance_field.rs  heightfield.rs  heightfield_layers.rs  lib.rs  mesh_merging.rs  polymesh.rs  rasterization.rs  triangle_utils.rs  watershed.rs
