[package]
name = "detour-dynamic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Dynamic navigation mesh generation for Recast and Detour"
keywords = ["pathfinding", "navigation", "mesh", "dynamic", "navmesh"]
categories = ["game-development", "algorithms"]

[dependencies]
recast-common = { workspace = true }
recast = { workspace = true }
detour = { workspace = true, features = ["serialization"] }
glam = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
lz4_flex = { workspace = true }

# Runtime-agnostic async primitives (WASM compatible)
async-lock = { workspace = true }
futures-lite = { workspace = true }

# Optional: tokio for spawn_blocking optimization on native platforms
tokio = { workspace = true, optional = true }

[dev-dependencies]
assert_approx_eq = { workspace = true }
tokio = { workspace = true }

[features]
default = []
tokio = ["dep:tokio"]

[lints]
workspace = true
