[package]
name = "recast-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tool for Recast navigation mesh generation"
keywords = ["cli", "recast", "navmesh", "tool", "command-line"]
categories = ["command-line-utilities", "game-development"]

[[bin]]
name = "recast-cli"
path = "src/main.rs"

[dependencies]
recast-common = { workspace = true }
recast = { workspace = true }
detour = { workspace = true, features = ["serialization"] }
glam = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
clap = { version = "4.5", features = ["derive"] }

[features]
default = []

[lints]
workspace = true
