[package]
name = "recast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Navigation mesh generation from 3D triangle meshes"
keywords = ["navmesh", "recast", "pathfinding", "voxelization", "mesh"]
categories = ["game-development", "algorithms"]

[dependencies]
recast-common = { workspace = true }
glam = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rayon = { workspace = true, optional = true }
bytemuck = { workspace = true }

[dev-dependencies]
assert_approx_eq = { workspace = true }

[features]
default = []
parallel = ["rayon"]

[lints]
workspace = true
